--- a/docs/modules/ROOT/pages/release-notes.adoc
+++ b/docs/modules/ROOT/pages/release-notes.adoc
@@ -75,83 +75,26 @@ expect to see "sync__gateway" and "sync__housekeeping" listed.
 documents. The response should indicate that "sync__gateway" and
 "sync__housekeeping" were removed.
 
-== GitHub issues
+=== View replacement
 
-*Performance Improvements*
+==== Installation and upgrade
 
-* https://github.com/couchbase/sync_gateway/issues/1383[*#1383*] Nginx
-load balancer needs plugins to detect db offline state.
-* https://github.com/couchbase/sync_gateway/issues/1850[*#1850*] Avoid
-duplicate parsing of HTTP query string
-* https://github.com/couchbase/sync_gateway/issues/2410[*#2410*] SG gets
-into a 100% cpu state, where restart is the only recovery
-* https://github.com/couchbase/sync_gateway/issues/2871[*#2871*] Review
-bucket_gocb concurrent op limits
-* https://github.com/couchbase/sync_gateway/issues/2928[*#2928*]
-Optimize document unmarshalling for GetDoc
+On startup, Sync Gateway will check for the existence of these design
+documents, and only attempt to create them if they do not already exist.
+Then, Sync Gateway will wait until views are available and indexed
+before starting to serve requests. To evaluate this, Sync Gateway will
+issue a `stale=false&limit=1` query against the Sync Gateway views
+(channels, access and role_access).
 
-*Enhancements*
+Installation will follow the same approach implemented in 2.0 for view install/upgrade:
+Index names will include an index version suffix
 
-* https://github.com/couchbase/sync_gateway/issues/744[*#744*] When try
-to put nonexistent document with rev: Document revision conflict
-* https://github.com/couchbase/sync_gateway/issues/955[*#955*] Support
-group reduce queries
-* https://github.com/couchbase/sync_gateway/issues/1280[*#1280*]
-Auto-expire unused _local checkpoint documents
-* https://github.com/couchbase/sync_gateway/issues/1580[*#1580*] Use
-latest version of Otto
-* https://github.com/couchbase/sync_gateway/issues/1720[*#1720*]
-Replication inaccurate 403 forbidden
-* https://github.com/couchbase/sync_gateway/issues/1850[*#1850*] Avoid
-duplicate parsing of HTTP query string
-* https://github.com/couchbase/sync_gateway/issues/2354[*#2354*] Windows
-service wrapper should write to a configurable stderr log file
-* https://github.com/couchbase/sync_gateway/issues/2709[*#2709*]
-Conflict-free mode (allow_conflicts:false)
-* https://github.com/couchbase/sync_gateway/issues/3123[*#3123*] Log
-_sync:seq on startup
-* https://github.com/couchbase/sync_gateway/issues/3136[*#3136*]
-Inter-document compression in BLIP replicator
-* https://github.com/couchbase/sync_gateway/issues/3168[*#3168*] Move
-allow_conflicts out of unsupported config
+On Sync Gateway startup, it will check for existence of required index versions, and create them if not present.
 
-*Bugs*
+As part of the existence check, SG will also check if num_replica for the existing indexes matches the value specified in SG’s config.  If not, will drop and recreate the index.
 
-* https://github.com/couchbase/sync_gateway/issues/1003[*#1003*] SG with
-bucket shadowing doesn't work properly after CB restarted
-* https://github.com/couchbase/sync_gateway/issues/1047[*#1047*] Runtime
-panic while running tests on Jenkins
-* https://github.com/couchbase/sync_gateway/issues/1406[*#1406*]
-Feedtype=DCP not working sometimes
-* https://github.com/couchbase/sync_gateway/issues/1488[*#1488*]
-Rebalance -in a CBS node results in timeouts which manifests as empty
-changes feed
-* https://github.com/couchbase/sync_gateway/issues/1720[*#1720*]
-Replication inaccurate 403 forbidden
-* https://github.com/couchbase/sync_gateway/issues/2108[*#2108*] Missing
-sequences in _changes feed causing sg-replicate missing documents
-replication
-* https://github.com/couchbase/sync_gateway/issues/2223[*#2223*] Wrong
-name being set for users
-* https://github.com/couchbase/sync_gateway/issues/2371[*#2371*] Logging - "Replicate" works when in *.json but not when you PUT _logging
-* https://github.com/couchbase/sync_gateway/issues/2383[*#2383*] Channel
-cache missing data when request instantiating cache times out
-* https://github.com/couchbase/sync_gateway/issues/2410[*#2410*] SG gets
-into a 100% cpu state, where restart is the only recovery
-* https://github.com/couchbase/sync_gateway/issues/2441[*#2441*]
-RedHat/Centos 6 'initctl restart sync_gateway' does not work as expected
-* https://github.com/couchbase/sync_gateway/issues/2458[*#2458*] Log
-rotation skipping BLIP keys
-* https://github.com/couchbase/sync_gateway/issues/2489[*#2489*] XATTRs - Error unmarshalling doc
-* https://github.com/couchbase/sync_gateway/issues/2497[*#2497*] XATTRS:
-Getting doc after restart fails
-* https://github.com/couchbase/sync_gateway/issues/2505[*#2505*] XATTRs:
-View not returning results after restart
-* https://github.com/couchbase/sync_gateway/issues/2521[*#2521*] XATTRs:
-GET on doc after deletion returns inconsistent responses
-* https://github.com/couchbase/sync_gateway/issues/2717[*#2717*] SG Blip
-handler not reloading user channels
-* https://github.com/couchbase/sync_gateway/issues/3048[*#3048*] Panic
-when attempting to make invalid update to a conflicting document
-* https://github.com/couchbase/sync_gateway/issues/3049[*#3049*] Allow
-non-winning tombstone revisions when running with allow_conflicts=false
+Note: Need to document the scenario where different SG nodes specify different values for num_replica, and get stuck in drop/create battle.
+
+On Sync Gateway startup, will verify index readiness (via query) before starting Sync Gateway’s REST API /db/_post_upgrade endpoint is used to remove obsolete index definitions, and is run after SG cluster upgrade is complete
+
+As in the view case, Sync Gateway requires the existence of both the previous and current index definitions during an upgrade (that involves changes to the index definitions).  This is required to support zero-downtime upgrade of a Sync Gateway cluster, but need to review whether this is a larger concern for index node sizing.
